app/deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-back
  labels:
    app: demo
    component: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      component: back
  template:
    metadata:
      labels:
        app: demo
        component: back
    spec:
      containers:
        - name: demo-back
          image: konstellation/demo-back:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    app: demo
    component: back
spec:
  clusterIP: None
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: demo
    component: back
