app/deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-front
  labels:
    app: demo
    component: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      component: front
  template:
    metadata:
      labels:
        app: demo
        component: front
    spec:
      containers:
        - name: demo-front
          image: konstellation/demo-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config/config.json
              subPath: config.json
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config-volume
          configMap:
            name: krt-demo-configmap
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: demo-front
spec:
  clusterIP: None
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: demo
    component: front
