app/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: demo-issuer
#    nginx.ingress.kubernetes.io/whitelist-source-range: "46.27.217.76/32"
  labels:
    app: demo
spec:
  tls:
    - hosts:
        - "demo.kre-demo.konstellation.io"
      secretName: demo-cert-tls
  rules:
    - host: demo.kre-demo.konstellation.io
      http:
        paths:
          - path: /api
            backend:
              serviceName: back
              servicePort: 80
          - path: /
            backend:
              serviceName: front
              servicePort: 80
